# neco-project

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: settings.local.json
.claude/commands/: commit-message.md
.github/workflows/: ci.yaml  gh-pages.yaml  rust-test.yaml
ci-scripts/: check-file-size.sh  check-newlines.sh  check.sh
docs/: design-principles.md  ptx_compile_ja.md
docs/neco-internal-language/: book.toml
examples/: README.md
examples/exit-42/: README.md  main.fe
examples/hello-world/: README.md  main.fe
examples/i64-add/: README.md  main.fe
examples/let-mut-string/: README.md  main.fe
examples/let-string/: README.md  main.fe
examples/let-without-expr/: README.md  main.fe
examples/ray-tracing-in-one-weekend/: README.md  build-and-run.sh
examples/statement-break/: README.md  main.fe
examples/statement-continue/: README.md  main.fe
examples/statement-if-1/: README.md  main.fe
examples/statement-if-2/: README.md  main.fe
examples/statement-loop/: README.md  main.fe
gen1/: rust-toolchain.toml
gen1/felis-code-gen-prepared/: Cargo.toml
gen1/felis-package/: Cargo.toml
gen1/felis-term/: Cargo.toml
gen1/felis-x86-64/: Cargo.toml
gen1/neco-resolver/: Cargo.toml
hooks/: pre-commit
neco-bootstrap/ci-scripts/: check.sh
neco-bootstrap/neco-cic/: CLAUDE.md  README.md
neco-bootstrap/neco-felis-rename/: Cargo.toml
neco-bootstrap/neco-felis-type-check/: Cargo.toml
neco-cic/: CLAUDE.md  Cargo.toml
neco-felis-compile/: Cargo.toml
neco-felis-syn/: Cargo.toml
neco-rs/: Cargo.toml
neco-rs/felis-code-gen-prepared/src/: lib.rs
neco-rs/felis-package/src/: lib.rs
neco-rs/felis-rename/: Cargo.toml
neco-rs/felis-rename/src/: lib.rs  path_resolver.rs  path_table.rs  path_table2.rs  rename_defs.rs  rename_defs2.rs  rename_uses.rs  rename_uses2.rs
neco-rs/felis-syn/: Cargo.toml
neco-rs/felis-syn/src/: decoration.rs  lib.rs  parse.rs  syn_entrypoint.rs  syn_expr.rs  syn_file.rs  syn_fn_def.rs  syn_formula.rs  syn_ident.rs  syn_statement.rs  syn_theorem_def.rs  syn_type.rs  syn_type_def.rs  syn_typed_arg.rs  test_utils.rs  to_felis_string.rs  token.rs  token_id.rs
neco-rs/felis-syn/src/syn_expr/: syn_expr_app.rs  syn_expr_block.rs  syn_expr_ident.rs  syn_expr_ident_with_path.rs  syn_expr_match.rs  syn_expr_paren.rs  syn_expr_string.rs
neco-rs/felis-syn/src/syn_statement/: syn_statement_assign.rs  syn_statement_expr_semi.rs  syn_statement_let.rs
neco-rs/felis-term/: Cargo.toml
neco-rs/felis-term/src/: lib.rs
neco-rs/felis-type-check/: Cargo.toml
neco-rs/felis-type-check-2/: Cargo.toml
neco-rs/felis-type-check-2/src/: lib.rs
neco-rs/felis-type-check/src/: lib.rs
neco-rs/felis-type-checker/: Cargo.toml
neco-rs/felis-type-checker/src/: retrieve.rs  typing.rs
neco-rs/felis-type-defs/: Cargo.toml
neco-rs/felis-type-defs/src/: lib.rs
neco-rs/felis-types-and-values/: Cargo.toml
neco-rs/felis-types-and-values/src/: types.rs  values.rs
neco-rs/felis-x86-64/: Cargo.toml
neco-rs/felis-x86-64/src/: lib.rs
neco-rs/neco/: Cargo.toml
neco-rs/neco-core-expr/: Cargo.toml
neco-rs/neco-core-expr/src/: core_expr.rs  lib.rs
neco-rs/neco-resolver/src/: lib.rs
neco-rs/neco-table/: Cargo.toml
neco-rs/neco-table/src/: lib.rs  table.rs  table_id.rs
neco-rs/neco-type-checker/: Cargo.toml
neco-rs/neco-type-checker/src/: lib.rs  type_checker.rs  type_term.rs
neco-rs/neco/src/: lib.rs  resolver.rs
neco-rs/neco/tests/: test_001.rs
pages/: index.html
pages-src/: .gitignore  index.html
tools/: check-file-size.sh  check-newlines.sh  check.sh  fix-and-check.sh  fix-newlines.sh  generate-coverage-report.sh
(+242 files in other folders)
