[workspace]
members = [
    "felis-package",
    "felis-rename",
    "felis-syn",
    "felis-type-check",
    "neco",
    "neco-resolver",
    "neco-table",
]

[workspace.dependencies]
felis-package = { path = "./felis-package" }
felis-rename = { path = "./felis-rename" }
felis-syn = { path = "./felis-syn" }
felis-type-check = { path = "./felis-type-check" }
neco = { path = "./neco" }
neco-resolver = { path = "./neco-resolver" }
neco-table = { path = "./neco-table" }
