[workspace]
resolver = "2"

members = [
    "felis-package",
    "felis-rename",
    "felis-syn",
    "felis-term",
    "neco",
    "neco-resolver",
    "neco-table",
]

[workspace.dependencies]
felis-package = { path = "./felis-package" }
felis-rename = { path = "./felis-rename" }
felis-syn = { path = "./felis-syn" }
felis-term = { path = "./felis-term" }
neco = { path = "./neco" }
neco-resolver = { path = "./neco-resolver" }
neco-table = { path = "./neco-table" }
