[workspace]
resolver = "2"

members = [
    "felis-package",
    "felis-rename",
    "felis-syn",
    "felis-term",
    "felis-x86-64",
    "felis-type-checker",
    "neco",
    "neco-resolver",
    "neco-type-checker",
]

[workspace.dependencies]
felis-package = { path = "./felis-package" }
felis-rename = { path = "./felis-rename" }
felis-syn = { path = "./felis-syn" }
felis-term = { path = "./felis-term" }
felis-x86-64 = { path = "./felis-x86-64" }
felis-type-checker = { path = "./felis-type-checker" }
neco = { path = "./neco" }
neco-resolver = { path = "./neco-resolver" }
neco-type-checker = { path = "./neco-type-checker" }
