[package]
name = "felis-rename"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
felis-package = { workspace = true }
felis-syn = { workspace = true }
neco-resolver = { workspace = true }
neco-table = { workspace = true }
