[package]
name = "felis-x86-64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
felis-syn = { path = "../felis-syn" }
felis-rename = { path = "../felis-rename" }
neco-resolver = { path = "../neco-resolver" }
