[package]
name = "felis-x86-64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
felis-syn = { workspace = true }
felis-rename = { workspace = true }
neco-resolver = { workspace = true }
felis-type-checker = { workspace = true }
